<resources>
    <string name="app_name">Story App</string>

    <!-- Label input -->
    <string name="label_email">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_name">Full Name</string>
    <string name="label_description">Description</string>

    <!-- Hint input -->
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_description">Tell us something about this image…</string>

    <!-- Validation input -->
    <string name="error_email_empty">Email address must be filled</string>
    <string name="error_email_invalid">Email address not valid</string>
    <string name="error_password_empty">Password must be filled</string>
    <string name="error_password_invalid">Password must be at least 8 characters</string>
    <string name="error_name_empty">Name must be filled</string>

    <!-- Sign In Features -->
    <string name="sign_in_title">Sign In</string>
    <string name="sign_in_description">Welcome back! Please enter your email and password to sign in</string>
    <string name="sign_in_action">Sign In</string>
    <string name="sign_up_promo">I didn\'t have an account</string>

    <!-- Sign Up Features -->
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_description">Welcome aboard! Please fill this form below to register</string>
    <string name="sign_up_action">Sign Up</string>
    <string name="sign_in_promo">I already have an account</string>

    <!-- Dashboard Activity Features -->
    <string name="create_post_menu_title">Post story</string>
    <string name="logout_menu_title">Logout</string>
    <string name="sample_name">John Doe</string>
    <string name="sample_description">This is my story learning android intermediate</string>
    <string name="story_image_description">An image of the story</string>

    <!-- Story Detail Activity Features -->
    <string name="story_detail_title">Story</string>
    <string name="sample_date_time">Saturday, 1 April 2022 10:00</string>
    <string name="open_google_maps">Open Google Maps</string>

    <!-- Camera Activity Features -->
    <string name="switch_camera_description">Switch camera</string>
    <string name="capture_image_description">Capture an image</string>
    <string name="open_gallery_description">Open gallery to pick image</string>
    <string name="camera_error_message">Failed to start camera</string>
    <string name="camera_permission_error_message">Didn\'t have permission to access camera</string>
    <string name="failed_to_capture">Failed to capture an image</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="post_story_title">Post Story</string>

    <!-- Post Activity Features -->
    <string name="post_menu_title">Post</string>
    <string name="location_not_found">Cannot find your location</string>
    <string name="location_not_granted">Location permission not granted</string>
    <string name="add_location">Add Location</string>
    <string name="searching_location">Searching Location…</string>
    <string name="coordinate_template" translatable="false">%1$.2f, %2$.2f</string>

    <!-- App Widget -->
    <string name="app_widget_description">A widget to show random story</string>
    <string name="refresh_widget_description">Refresh widget</string>
    <string name="no_data_widget_message">Uppss… you should access the app first and sign in</string>

    <!-- Bottom Navigation Title -->
    <string name="home_navigation_title">Home</string>
    <string name="maps_navigation_title">Maps</string>
    <string name="profile_navigation_title">Profile</string>
    <string name="simple_greeting">Hello,</string>

    <!-- Profile Fragment -->
    <string name="sign_out_title">Sign out</string>
</resources>