<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_margin="16dp">

    <LinearLayout
        android:id="@+id/post_card"
        style="@style/Widget.StoryApp.AppWidget.Container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/AppTheme.AppWidgetContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="@color/md_theme_light_primary"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/action_refresh_widget"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/refresh_widget_description"
                android:padding="12dp"
                android:src="@drawable/baseline_refresh_24"
                android:tint="@color/md_theme_light_primary"
                tools:ignore="UseAppTint" />

            <ImageButton
                android:id="@+id/create_post_action"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/create_post_menu_title"
                android:padding="12dp"
                android:src="@drawable/baseline_add_box_24"
                android:tint="@color/md_theme_light_primary"
                tools:ignore="UseAppTint" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/round_outline"
            android:clipToOutline="true"
            android:contentDescription="@string/story_image_description"
            android:scaleType="centerCrop"
            tools:src="@drawable/story_placeholder" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            tools:text="@string/sample_name" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="@color/md_theme_light_secondary"
            tools:text="@string/sample_description" />

    </LinearLayout>

</RelativeLayout>