<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.dashboard.profile.ProfileFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hello_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/simple_greeting"
        android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.DisplayMedium"
        app:layout_constraintStart_toStartOf="@+id/hello_title"
        app:layout_constraintTop_toBottomOf="@+id/hello_title"
        tools:text="@string/sample_name" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_out_button"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="?attr/colorError"
        android:text="@string/sign_out_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>